# nexusos

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  nexus.yaml
assets/boot/grub/: grub.cfg.template
assets/branding/: nexus-logo.txt
ci/: Dockerfile.build
ci/github/workflows/: build.yml
cmake/: version.hpp.in
docs/: architecture.md  build.md  cli.md  hardening.md  iso-pipeline.md  legal-and-ethical-use.md  profiles.md  release.md  roadmap.md  testing.md  troubleshooting.md
include/nexus/: common.hpp
overlays/common/etc/audit/: audit.rules
overlays/common/etc/nexus/: update-manifest.example.json  update.conf
overlays/common/etc/nftables.d/: nexus-base.conf
overlays/common/etc/sysctl.d/: 99-nexus-hardening.conf
overlays/forensic/etc/live/config.d/: nexus-forensic.sh
overlays/hardened/etc/sudoers.d/: nexus-hardened
overlays/hardened/etc/sysctl.d/: 99-nexus-hardened-extra.conf
overlays/lab/etc/sudoers.d/: nexus-lab
profiles/: analyst.yaml  blueteam.yaml  cloud.yaml  core.yaml  forensic.yaml  full.yaml  lab.yaml  reverse.yaml
scripts/: build-iso-now.sh
scripts/bootstrap/: install-deps.sh
scripts/chroot/: configure-base.sh  setup-user.sh
scripts/iso/: build-squashfs.sh  generate-iso.sh  write-usb.sh
scripts/release/: generate-checksums.sh
scripts/test/: smoke-test-qemu.sh  validate-rootfs.sh
src/branding/: CMakeLists.txt  branding_manager.cpp  branding_manager.hpp
src/builder/: CMakeLists.txt  iso_builder.cpp  iso_builder.hpp  rootfs_builder.cpp  rootfs_builder.hpp
src/cli/: CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt  config_parser.cpp  config_parser.hpp
src/core/: CMakeLists.txt  orchestrator.cpp  orchestrator.hpp
src/packaging/: CMakeLists.txt  package_manager.cpp  package_manager.hpp
src/profiles/: CMakeLists.txt  profile_manager.cpp  profile_manager.hpp
src/security/: CMakeLists.txt  hardening_engine.cpp  hardening_engine.hpp
src/testing/: CMakeLists.txt  smoke_tester.cpp  smoke_tester.hpp
src/utils/: CMakeLists.txt  checksum.cpp  checksum.hpp  logger.cpp  logger.hpp  manifest.cpp  manifest.hpp  process.cpp  process.hpp
tests/: CMakeLists.txt
tests/integration/: test_build_pipeline.cpp
tests/unit/: test_checksum.cpp  test_config_parser.cpp  test_manifest.cpp  test_orchestrator.cpp  test_profile_manager.cpp
